Added ajax calls

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -15,10 +15,11 @@
       <input type="text" id="ownerLast" class="ownerInput" name="lastName" value="" placeholder="Last Name">
       <button type="button" id="register" name="">Register</button>
   <h2>Pets</h2>
-  <span>Owner Name <select class="petInput" name="pets"></select></span>
-      <input type="text" class="petInput" name="petName" value="" placeholder="Pet Name">
-      <input type="text" class="petInput" name="petColor" value=""placeholder="Pet Color">
-      <input type="text" class="petInput" name="petBreed" value=""placeholder="Pet Breed">
+    <span>Owner Name <select class="savedOwners" name="pets">
+    </select></span>
+      <input type="text" id="petName" class="petInput" name="petName" value="" placeholder="Pet Name">
+      <input type="text" id="petColor" class="petInput" name="petColor" value=""placeholder="Pet Color">
+      <input type="text" id="petBreed" class="petInput" name="petBreed" value=""placeholder="Pet Breed">
       <button type="button" id="addPet" name="button">Add</button>
     </form>
     <table>
